--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,8 +3,7 @@
 <head>
    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
    <title>{{ page.title }}</title>
-   <meta name="author" content="Tom Preston-Werner" />
-   <link href="http://feeds.feedburner.com/tom-preston-werner" rel="alternate" title="Tom Preston-Werner" type="application/atom+xml" />
+   <meta name="author" content="Kliment Mamykin" />
 
    <!-- syntax highlighting CSS -->
    <link rel="stylesheet" href="/css/syntax.css" type="text/css" />
@@ -20,7 +19,7 @@
 
 <div class="site">
   <div class="title">
-    <a href="/">Tom Preston-Werner</a>
+    <a href="/">Kliment Mamykin</a>
     <a class="extra" href="/">home</a>
   </div>
   
@@ -29,35 +28,42 @@
   <div class="footer">
     <div class="contact">
       <p>
-        Tom Preston-Werner<br />
-        Cofounder of <a href="http://github.com/">GitHub</a><br />
-        tom@mojombo.com
+        Kliment Mamykin<br />
+        Cofounder of <a href="http://qrio.us/">Qrious</a><br />
+        &#107;&#109;&#097;&#109;&#121;&#107;&#064;&#113;&#114;&#105;&#111;&#046;&#117;&#115;
       </p>
     </div>
     <div class="contact">
       <p>
-        <a href="http://github.com/mojombo/">github.com/mojombo</a><br />
-        <a href="http://twitter.com/mojombo/">twitter.com/mojombo</a><br />
-        <a href="http://flickr.com/photos/mojombo/">flickr.com/photos/mojombo</a>
+        <a href="http://github.com/kmamykin">github.com/kmamykin</a><br />
+        <a href="http://twitter.com/kmamyk">twitter.com/kmamyk</a><br />
+        <a href="http://facebook.com/kmamyk">facebook.com/kmamyk</a><br />
+        <a href="http://linkedin.com/in/kmamyk">linkedin.com/in/kmamyk</a><br />
+        <a href="http://flickr.com/photos/kmamyk/">flickr.com/photos/kmamyk</a>
       </p>
     </div>
     <div class="rss">
-      <a href="http://feeds.feedburner.com/tom-preston-werner">
+      <a href="http://feeds.feedburner.com/kmamyk">
         <img src="/images/rss.png" alt="Subscribe to RSS Feed" />
       </a>
     </div>
   </div>
 </div>
 
-<a href="http://github.com/mojombo"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub" /></a>
+<a href="http://github.com/kmamykin/mamykin.com"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub" /></a>
 
 <script type="text/javascript">
-var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-</script>
-<script type="text/javascript">
-var pageTracker = _gat._getTracker("UA-6016902-1");
-pageTracker._trackPageview();
+
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-20522581-6']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
 </script>
 
 </body>
