Corrections to gvim/janus post

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -20,7 +20,7 @@ layout: default
     var disqus_shortname = '{{ site.disqus_forum }}'; // required: replace example with your forum shortname
 
     // The following are highly recommended additional parameters. Remove the slashes in front to use.
-    // var disqus_developer = 1; // developer mode is on
+    var disqus_developer = 1; // developer mode is on
     var disqus_identifier = '{{ page.url }}';
     var disqus_url = '{{ site.url }}{{ page.url }}';
 
